...

                BasicTextField(
                    value = searchQuery,
                    onValueChange = onQueryChange,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("searchInput")
                        .focusRequester(focusRequester),
                    singleLine = true,
                    textStyle = EreaderFontSize.L.copy(
                        color = EreaderColors.Black
                    ),
                    cursorBrush = SolidColor(EreaderColors.Black),
...
